style.css
body {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 100px;
    background-color: #CDC8B1;
    font-family: monospace;
}

#calc-body {
    background-color: slategray;
    border-radius: 20px;
    height: 500px;
    width: 400px;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px;
    box-shadow: inset 1px 1px 5px white, 2px 2px 10px 2px black;
}

#calc-display {
    height: 100px;
    width: 100%;
    padding: 10px;
    border-radius: 5px;
    background-color: #8bac0f;
    color: #0f380f;
    font-family: 'VT323';
    font-size: 70px;
    text-align: right;
    border: inset 2px black;
    box-shadow: inset 1px 1px 5px black;
}

#upper-display {
    font-size: 40px;
    display: block;
    height: 40px;
}

#photovoltaic-panel {
    width: 150px;
    height: 40px;
    background-color: darkgrey;
    box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.2),
                inset -2px -2px 5px rgba(255, 255, 255, 0.7);
    border-radius: 5px;
    margin: 20px;
  }

#btn-container {
    margin-top: 20px;
    width: 100%;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: auto auto auto auto auto;
    grid-gap: 0px;
}

.btn {
    font-family: monospace;
    font-weight: 900;
    font-size: 20px;
    color: black;
    height: 50px;
    width: 70px;
    margin: 5px;
    border-radius: 7px;
    background-color: #E2DFD2;
    box-shadow: inset 1px 1px 5px white,
                      2px 2px 2px #49463E;
    cursor: pointer;
}

.btn:active {
    position: relative;
    top: 1px;
    box-shadow: inset 1px 1px 5px white;
}

#clear-button {
    background-color: indianred;
    grid-column: 1 / span 1;
}

#ce-button {
    background-color: indianred;
    grid-column: 2 / span 3;
}

#equals-button {
    background-color: #5F9EA0;
}

.op-btn {
    background-color: #696969;
}

